rework traversal control, enable explicit inclusion